# TestWork2654

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 527b701c1c8a_initial_migration.py  942d16438d2a_status_using_enum.py
app/: conftest.py  main.py
app/core/: config.py  security.py
app/db/: session.py
app/tasks/: enums.py  models.py  repository.py  router.py  schemas.py  service.py
app/tests/tasks/: fixtures.py  test_tasks.py
app/tests/users/: fixtures.py  test_auth.py
app/users/: models.py  repository.py  router.py  schemas.py  service.py
commands/: entrypoint.sh  start.sh
